--- a/Games/Snake/Snake.html
+++ b/Games/Snake/Snake.html
@@ -7,8 +7,8 @@
     <title>Snake Game</title>
 </head>
 <body>
-    <canvas id="canvas" width="500" height="400" style="border: 1px solid black;">Browser don't support canvas!</canvas>
-    
+    <canvas id="canvas" width="500" height="400" style="border: 5px solid black;">Browser don't support canvas!</canvas>
+    <button onclick = "MoveSnake()">Start</button>
     <script src="snake.js" type="text/javascript"></script>
 </body>
 </html>
